Dynamic regions and fixed access key as text instead of vault

--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "imgUrl": "logo.png",
   "execProgram": "node",
   "main": "app.js",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Integration with AWS Code Deploy API.",
   "category": "CI/CD",
   "keywords": ["aws", "amazon", "code", "cloud", "cluster", "vm", "cli", "instance", "service", "deployment"],
@@ -13,7 +13,7 @@
     {
       "name": "accessKeyId",
       "viewName": "Access key",
-      "type": "string",
+      "type": "vault",
       "description": "The default Access Key ID to use to authenticate to AWS.",
       "placeholder": "AKIAIOSFODNN7EXAMPLE",
       "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
@@ -43,7 +43,7 @@
         {
           "name": "accessKeyId",
           "viewName": "Access key",
-          "type": "string",
+          "type": "vault",
           "description": "The Access Key ID to use to authenticate to AWS for this request.",
           "placeholder": "AKIAIOSFODNN7EXAMPLE",
           "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
@@ -61,7 +61,7 @@
           "viewName": "Region",
           "type": "autocomplete",
           "autocompleteType": "function",
-          "functionName": "listRegionsAuto",
+          "functionName": "listRegions",
           "description": "The AWS region to make this request on.",
           "placeholder": "us-east-2",
           "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
@@ -90,7 +90,7 @@
         {
           "name": "accessKeyId",
           "viewName": "Access key",
-          "type": "string",
+          "type": "vault",
           "description": "The Access Key ID to use to authenticate to AWS for this request.",
           "placeholder": "AKIAIOSFODNN7EXAMPLE",
           "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
@@ -108,7 +108,7 @@
           "viewName": "Region",
           "type": "autocomplete",
           "autocompleteType": "function",
-          "functionName": "listRegionsAuto",
+          "functionName": "listRegions",
           "description": "The AWS region to make this request on.",
           "placeholder": "us-east-2",
           "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
@@ -228,7 +228,7 @@
         {
           "name": "accessKeyId",
           "viewName": "Access key",
-          "type": "string",
+          "type": "vault",
           "description": "The Access Key ID to use to authenticate to AWS for this request.",
           "placeholder": "AKIAIOSFODNN7EXAMPLE",
           "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
@@ -246,7 +246,7 @@
           "viewName": "Region",
           "type": "autocomplete",
           "autocompleteType": "function",
-          "functionName": "listRegionsAuto",
+          "functionName": "listRegions",
           "description": "The AWS region to make this request on.",
           "placeholder": "us-east-2",
           "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
@@ -284,7 +284,7 @@
         {
           "name": "accessKeyId",
           "viewName": "Access key",
-          "type": "string",
+          "type": "vault",
           "description": "The Access Key ID to use to authenticate to AWS for this request.",
           "placeholder": "AKIAIOSFODNN7EXAMPLE",
           "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
@@ -302,7 +302,7 @@
           "viewName": "Region",
           "type": "autocomplete",
           "autocompleteType": "function",
-          "functionName": "listRegionsAuto",
+          "functionName": "listRegions",
           "description": "The AWS region to make this request on.",
           "placeholder": "us-east-2",
           "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
@@ -316,7 +316,7 @@
         {
           "name": "accessKeyId",
           "viewName": "Access key",
-          "type": "string",
+          "type": "vault",
           "description": "The Access Key ID to use to authenticate to AWS for this request.",
           "placeholder": "AKIAIOSFODNN7EXAMPLE",
           "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
@@ -334,7 +334,7 @@
           "viewName": "Region",
           "type": "autocomplete",
           "autocompleteType": "function",
-          "functionName": "listRegionsAuto",
+          "functionName": "listRegions",
           "description": "The AWS region to make this request on.",
           "placeholder": "us-east-2",
           "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
