Fix listing bug, update config.json

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-  "id": "aws-codedeploy",
-  "name": "AWS CodeDeploy",
+  "name": "aws-codedeploy",
+  "viewName": "AWS CodeDeploy",
   "type": "executer",
   "imgUrl": "logo.png",
   "execProgram": "node",
   "main": "app.js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Integration with AWS Code Deploy API.",
   "category": "CI/CD",
   "keywords": ["aws", "amazon", "code", "cloud", "cluster", "vm", "cli", "instance", "service", "deployment"],
