--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 	"author": "Kaholo Group(Amit Alon)",
 	"license": "ISC",
 	"dependencies": {
-		"aws-sdk": "^2.1021.0"
+		"aws-sdk": "2.1021.0",
+		"kaholo-aws-plugin-library": "github:Kaholo/aws-plugin-library#v1.0.2",
+		"lodash": "4.17.21"
 	},
 	"devDependencies": {
-		"eslint": "^8.13.0",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-plugin-import": "^2.26.0"
+		"eslint": "8.13.0",
+		"eslint-config-airbnb-base": "15.0.0",
+		"eslint-plugin-import": "2.26.0"
 	}
 }
