--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "2.1021.0",
-    "kaholo-aws-plugin-library": "github:Kaholo/aws-plugin-library#v1.0.2",
-    "lodash": "4.17.21"
+    "kaholo-aws-plugin-library": "github:Kaholo/aws-plugin-library#v1.0.2"
   },
   "devDependencies": {
     "eslint": "8.13.0",
