--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Kaholo Group(Amit Alon)",
   "license": "ISC",
   "dependencies": {
+    "@kaholo/aws-plugin-library": "^2.0.0",
     "aws-sdk": "2.1021.0",
-    "kaholo-aws-plugin-library": "github:Kaholo/aws-plugin-library#v1.0.2"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "eslint": "8.13.0",
