--- a/config.json
+++ b/config.json
@@ -9,30 +9,34 @@
   "description": "Integration with AWS Code Deploy API.",
   "category": "CI/CD",
   "keywords": ["aws", "amazon", "code", "cloud", "cluster", "vm", "cli", "instance", "service", "deployment"],
+  "auth": {
+    "authId": "awsAccount",
+    "params": [
+      {
+        "name": "accessKeyId",
+        "viewName": "Access Key ID",
+        "type": "vault",
+        "description": "The default AWS Access Key ID to use for authentication.",
+        "placeholder": "AKIAIOSFODNN7EXAMPLE",
+        "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
+      },
+      {
+        "name": "secretAccessKey",
+        "viewName": "Access Key Secret",
+        "type": "vault",
+        "description": "The default AWS Access Key secret to use for authentication.",
+        "placeholder": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
+        "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
+      }
+    ]
+  },
   "settings": [
-    {
-      "name": "accessKeyId",
-      "viewName": "Access key",
-      "type": "vault",
-      "description": "The default Access Key ID to use to authenticate to AWS.",
-      "placeholder": "AKIAIOSFODNN7EXAMPLE",
-      "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-    },
-    {
-      "name": "secretAccessKey",
-      "viewName": "Secret key",
-      "type": "vault",
-      "description": "The default Secret Key to use to authenticate to AWS.",
-      "placeholder": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
-      "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-    },
     {
       "name": "region",
       "viewName": "Region",
       "type": "string",
-      "description": "The default AWS region to make requests on.",
-      "placeholder": "us-east-2",
-      "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
+      "description": "The ID of the default region to make requests on.",
+      "learnUrl": "https://docs.aws.amazon.com/general/latest/gr/s3.html"
     }
   ],
   "methods": [
@@ -40,32 +44,6 @@
       "name": "createApplication",
       "viewName": "Create EC2 Application",
       "params": [
-        {
-          "name": "accessKeyId",
-          "viewName": "Access key",
-          "type": "vault",
-          "description": "The Access Key ID to use to authenticate to AWS for this request.",
-          "placeholder": "AKIAIOSFODNN7EXAMPLE",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "secretAccessKey",
-          "viewName": "Secret key",
-          "type": "vault",
-          "description": "The Secret Key to use to authenticate to AWS for this request.",
-          "placeholder": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "region",
-          "viewName": "Region",
-          "type": "autocomplete",
-          "autocompleteType": "function",
-          "functionName": "listRegions",
-          "description": "The AWS region to make this request on.",
-          "placeholder": "us-east-2",
-          "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
-        },
         {
           "name": "name",
           "viewName": "Name",
@@ -89,32 +67,6 @@
       "name": "createDeploymentGroup",
       "viewName": "Create In-place Deployment Group",
       "params": [
-        {
-          "name": "accessKeyId",
-          "viewName": "Access key",
-          "type": "vault",
-          "description": "The Access Key ID to use to authenticate to AWS for this request.",
-          "placeholder": "AKIAIOSFODNN7EXAMPLE",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "secretAccessKey",
-          "viewName": "Secret key",
-          "type": "vault",
-          "description": "The Secret Key to use to authenticate to AWS for this request.",
-          "placeholder": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "region",
-          "viewName": "Region",
-          "type": "autocomplete",
-          "autocompleteType": "function",
-          "functionName": "listRegions",
-          "description": "The AWS region to make this request on.",
-          "placeholder": "us-east-2",
-          "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
-        },
         {
           "name": "application",
           "viewName": "Application",
@@ -234,32 +186,6 @@
       "viewName": "Create EC2 Deployment Config",
       "params": [
         {
-          "name": "accessKeyId",
-          "viewName": "Access key",
-          "type": "vault",
-          "description": "The Access Key ID to use to authenticate to AWS for this request.",
-          "placeholder": "AKIAIOSFODNN7EXAMPLE",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "secretAccessKey",
-          "viewName": "Secret key",
-          "type": "vault",
-          "description": "The Secret Key to use to authenticate to AWS for this request.",
-          "placeholder": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "region",
-          "viewName": "Region",
-          "type": "autocomplete",
-          "autocompleteType": "function",
-          "functionName": "listRegions",
-          "description": "The AWS region to make this request on.",
-          "placeholder": "us-east-2",
-          "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
-        },
-        {
           "name": "name",
           "viewName": "Name",
           "type": "string",
@@ -290,32 +216,6 @@
       "name": "createDeployment",
       "viewName": "Create EC2 Deployment from S3",
       "params": [
-        {
-          "name": "accessKeyId",
-          "viewName": "Access key",
-          "type": "vault",
-          "description": "The Access Key ID to use to authenticate to AWS for this request.",
-          "placeholder": "AKIAIOSFODNN7EXAMPLE",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "secretAccessKey",
-          "viewName": "Secret key",
-          "type": "vault",
-          "description": "The Secret Key to use to authenticate to AWS for this request.",
-          "placeholder": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "region",
-          "viewName": "Region",
-          "type": "autocomplete",
-          "autocompleteType": "function",
-          "functionName": "listRegions",
-          "description": "The AWS region to make this request on.",
-          "placeholder": "us-east-2",
-          "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
-        },
         {
           "name": "application",
           "viewName": "Application",
@@ -362,66 +262,12 @@
     {
       "name": "listApps",
       "viewName": "List Applications",
-      "params": [
-        {
-          "name": "accessKeyId",
-          "viewName": "Access key",
-          "type": "vault",
-          "description": "The Access Key ID to use to authenticate to AWS for this request.",
-          "placeholder": "AKIAIOSFODNN7EXAMPLE",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "secretAccessKey",
-          "viewName": "Secret key",
-          "type": "vault",
-          "description": "The Secret Key to use to authenticate to AWS for this request.",
-          "placeholder": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "region",
-          "viewName": "Region",
-          "type": "autocomplete",
-          "autocompleteType": "function",
-          "functionName": "listRegions",
-          "description": "The AWS region to make this request on.",
-          "placeholder": "us-east-2",
-          "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
-        }
-      ]
+      "params": []
     },
     {
       "name": "listDeploymentsConfigs",
       "viewName": "List EC2 Deployment Configurations",
-      "params": [
-        {
-          "name": "accessKeyId",
-          "viewName": "Access key",
-          "type": "vault",
-          "description": "The Access Key ID to use to authenticate to AWS for this request.",
-          "placeholder": "AKIAIOSFODNN7EXAMPLE",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "secretAccessKey",
-          "viewName": "Secret key",
-          "type": "vault",
-          "description": "The Secret Key to use to authenticate to AWS for this request.",
-          "placeholder": "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY",
-          "learnUrl": "https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey"
-        },
-        {
-          "name": "region",
-          "viewName": "Region",
-          "type": "autocomplete",
-          "autocompleteType": "function",
-          "functionName": "listRegions",
-          "description": "The AWS region to make this request on.",
-          "placeholder": "us-east-2",
-          "learnUrl": "https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html"
-        }
-      ]
+      "params": []
     }
   ]
 }
