--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@kaholo/aws-plugin-library": "^2.0.0",
     "aws-sdk": "2.1021.0",
-    "lodash": "^4.17.21"
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "eslint": "8.13.0",
